Bug 365011 - Regression: Launcher for eclipse broken
Summary: Regression: Launcher for eclipse broken
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Icons-only Task Manager (other bugs)
Version First Reported In: 5.5.95
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: 1.0
Assignee: Eike Hein
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-07-02 18:05 UTC by Christian (Fuchs)
Modified: 2016-07-07 20:11 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christian (Fuchs) 2016-07-02 18:05:12 UTC
When I add a launcher for eclipse in the icon only task manager, it behaves very weird. It is shown as long as the application is running, then hides and is re-shown when I start the application, is shown while the application is running and disappears when I restart the application. 

When re-starting eclipse afterwards, the launcher re-appears where it was placed before.

Reproducible: Always

Steps to Reproduce:
1. Download eclipse from eclipse.org
2. Install and launch it
3. Right click and add a launcher for when the application is not running
4. Exit and restart eclipse

Actual Results:  
Launcher misbehaving as described above

Expected Results:  
Launcher behaving correctly
Comment 1 Eike Hein 2016-07-03 09:24:17 UTC
Please get me your Eclipse launcher URL from your appletsrc file in ~/.config. I might not be able to repro your issue otherwise, since this could be an issue of matching up your stored launcher URL with the running window instead of a fresh launcher URL derived from the running window.
Comment 2 Christian (Fuchs) 2016-07-03 11:38:33 UTC
Hi Eike, 

I assume you mean

[Containments][1][Applets][96][Configuration][General]
launchers=file:///usr/share/applications/org.kde.konsole.desktop,file:///usr/share/applications/org.kde.dolphin.desktop,file:///home/fuchs/.local/share/applications/firefox.desktop,file:///usr/share/applications/google-chrome-beta.desktop,file:///usr/share/applications/org.kde.konversation.desktop,file:///usr/share/applications/kde4/amarok.desktop,file:///usr/share/applications/smplayer.desktop,file:///home/fuchs/.local/share/applications/org.kde.kate.desktop,file:///home/fuchs/.local/share/applications/Eclipse.desktop,file:///usr/share/applications/libreoffice-writer.desktop,file:///usr/share/applications/libreoffice-calc.desktop,file:///usr/share/applications/libreoffice-impress.desktop,file:///usr/share/applications/org.kde.kontact.desktop,file:///home/fuchs/.local/share/applications/VirtualBox.desktop


this one, from .config/plasma-org.kde.plasma.desktop-appletsrc. 

Thanks for having a look
Comment 3 Eike Hein 2016-07-04 08:04:42 UTC
Some additional questions/requests:

1. Did you add the launcher using step #3, or did you go via the menu?

2. Did you do it using Plasma 5.6.x or 5.7 (beta)?

3. How did you install Eclipse?

4. What's the value of the Exec= key in /home/fuchs/.local/share/applications/Eclipse.desktop?

5. Please attach xprop output for the Eclipse window
Comment 4 Christian (Fuchs) 2016-07-04 08:07:35 UTC
(In reply to Eike Hein from comment #3)
> Some additional questions/requests:

Sure

> 1. Did you add the launcher using step #3, or did you go via the menu?

I tried both via the menu and via a right click on an existing instance. The result is the same.

> 2. Did you do it using Plasma 5.6.x or 5.7 (beta)?

This only happens with 5.7 (beta) and I added it there.

> 3. How did you install Eclipse?

With the provided graphical installer when you download it from eclipse.org

Questions 4 and 5 I can't answer before this evening, as currently I have my work laptop, which has Plasma 5.6 where it works as expected. 

Kind regards, 

Christian
Comment 5 Eike Hein 2016-07-04 08:19:19 UTC
^ The reason I asked #3 is because the Eclipse installer didn't put a .desktop file into ~/.local for me, so I don't have Eclipse in the menu at all.

I'm surprised the behavior is different from Plasma 5.6, because the heuristic that tries to derive a launcher from window metadata hasn't changed hugely.

Anyway, so on my side I get this in xprop for the Eclipse window:

WM_CLASS(STRING) = "Eclipse", "Eclipse"

This is good. If I had an Eclipse.desktop file like you do, it would be found and used for the launcher URL. Everything should then work as one would want it to.

I admit I also have some trouble understanding your first paragraph though, it gets a bit confusing to follow. Could you reformat the exact order of events in chronological bullets, and be a bit harder on your terminology going by the following explanation: A launcher is what's shown before a window appears. When a window appears, a launcher should be replaced by the window. When the window is closed, it should be replaced by the launcher. I need to know the exact sequence of when that intended behavior breaks down, and how.
Comment 6 Christian (Fuchs) 2016-07-04 08:38:44 UTC
(In reply to Eike Hein from comment #5)
> ^ The reason I asked #3 is because the Eclipse installer didn't put a
> .desktop file into ~/.local for me, so I don't have Eclipse in the menu at
> all.

Odd, maybe that is a leftover, but I will try removing it this evening to see if that helps. 

> I admit I also have some trouble understanding your first paragraph though,
> it gets a bit confusing to follow. Could you reformat the exact order of
> events in chronological bullets, and be a bit harder on your terminology
> going by the following explanation: A launcher is what's shown before a
> window appears. When a window appears, a launcher should be replaced by the
> window. When the window is closed, it should be replaced by the launcher. I
> need to know the exact sequence of when that intended behavior breaks down,
> and how.

Sure: 

1) Add launcher  (no matter how, let's say via menu for now)
2) Place it somewhere in the middle of other launchers, to see the effect described later better
3) Click on the launcher: Eclipse starts with the splash screen
4) The launcher quickly disappears and is then replaced with the window, still at the position in the taskbar where you placed it
5) Exit eclipse
6) The window disappears, the launcher is not there afterwards (there is no empty space, the launchers that were to the right of it just move to the left as if it was not there)
7) Start eclipse again  (via krunner or something, since you no longer have the launcher) 
8) The running window appears where the launcher was before  (not at the right where new windows without launchers would appear)
Comment 7 Eike Hein 2016-07-04 08:58:31 UTC
Thanks, that was super helpful. Do you know which version of Plasma 5.7 you have exactly? Is it the beta, or a git build? If it's a git build, do you know if you have cc2b38b4? That commit from June 30th might have actually addressed this.

Otherwise, when you get home to your system, aside from #4 and #5 it might also help to just attach that .desktop file for me, too.
Comment 8 Christian (Fuchs) 2016-07-04 10:19:53 UTC
(In reply to Eike Hein from comment #7)
> Thanks, that was super helpful. Do you know which version of Plasma 5.7 you
> have exactly? Is it the beta, or a git build?

It's the gentoo plasma-*-5.6.95.ebuild which is built out of tarballs, so whatever was in these. 

> If it's a git build, do you
> know if you have cc2b38b4? That commit from June 30th might have actually
> addressed this.

I can try to find some time this week to re-compile it with that commit as a patch to see if that helps.

> Otherwise, when you get home to your system, aside from #4 and #5 it might
> also help to just attach that .desktop file for me, too.

Shall do that, thanks so far.
Comment 9 Christian (Fuchs) 2016-07-04 17:43:17 UTC
[Desktop Entry]
Comment=Eclipse IDE
Exec=/home/fuchs/bin/eclipse/java-neon/eclipse/eclipse.sh
GenericName=Eclipse IDE
Icon=/opt/eclipse/icon.xpm
Name=Eclipse
NoDisplay=false
Path[$e]=
StartupNotify=true
Terminal=0
TerminalOptions=
Type=Application
X-KDE-SubstituteUID=false
X-KDE-Username=



_NET_WM_USER_TIME(CARDINAL) = 825123
_NET_WM_ICON_GEOMETRY(CARDINAL) = 812, 862, 48, 36
_NET_WM_ALLOWED_ACTIONS(ATOM) = _NET_WM_ACTION_MOVE, _NET_WM_ACTION_RESIZE, _NET_WM_ACTION_MINIMIZE, _NET_WM_ACTION_SHADE, _NET_WM_ACTION_MAXIMIZE_VERT, _NET_WM_ACTION_MAXIMIZE_HORZ, _NET_WM_ACTION_FULLSCREEN, _NET_WM_ACTION_CHANGE_DESKTOP, _NET_WM_ACTION_CLOSE
_KDE_NET_WM_FRAME_STRUT(CARDINAL) = 4, 4, 24, 4
_NET_FRAME_EXTENTS(CARDINAL) = 4, 4, 24, 4
_NET_WM_DESKTOP(CARDINAL) = 4
_KDE_NET_WM_ACTIVITIES(STRING) = "fb3af15a-efba-4fde-acd9-7272ef5ea170"
WM_STATE(WM_STATE):
                window state: Normal
                icon window: 0x0
_NET_WM_STATE(ATOM) = 
WM_HINTS(WM_HINTS):
                Client accepts input or input focus: True
                Initial state is Normal State.
                bitmap id # to use for icon: 0x6e0003a
                bitmap id # of mask for icon: 0x6e00040
                window id # of group leader: 0x6e00001
XdndAware(ATOM) = BITMAP
_NET_WM_ICON(CARDINAL) = 
_KDE_NET_WM_USER_CREATION_TIME(CARDINAL) = 753181
_NET_WM_OPAQUE_REGION(CARDINAL) = 0, 0, 1559, 798
_NET_WM_WINDOW_TYPE(ATOM) = _NET_WM_WINDOW_TYPE_NORMAL
_NET_WM_SYNC_REQUEST_COUNTER(CARDINAL) = 115343416, 115343417
_NET_WM_USER_TIME_WINDOW(WINDOW): window id # 0x6e00037
WM_CLIENT_LEADER(WINDOW): window id # 0x6e00001
_NET_WM_PID(CARDINAL) = 18309
WM_LOCALE_NAME(STRING) = "de_CH.UTF-8"
WM_CLIENT_MACHINE(STRING) = "foxpad"
WM_NORMAL_HINTS(WM_SIZE_HINTS):
                program specified minimum size: 545 by 26
                program specified base size: 0 by 0
                window gravity: NorthWest
WM_PROTOCOLS(ATOM): protocols  WM_DELETE_WINDOW, WM_TAKE_FOCUS, _NET_WM_PING, _NET_WM_SYNC_REQUEST
WM_CLASS(STRING) = "Eclipse", "Eclipse"
WM_ICON_NAME(STRING) = "eclipse - Java - isola/src/isola/gui/GameViewer.java - Eclipse "
_NET_WM_ICON_NAME(UTF8_STRING) = "eclipse - Java - isola/src/isola/gui/GameViewer.java - Eclipse "
WM_NAME(STRING) = "eclipse - Java - isola/src/isola/gui/GameViewer.java - Eclipse "
_NET_WM_NAME(UTF8_STRING) = "eclipse - Java - isola/src/isola/gui/GameViewer.java - Eclipse "


Currently trying to get a more recent icons only task manager, unfortunately I can't patch in the commit you mentioned as it depends on others, trying to compile the whole -workspace and -desktop from 5.7 and hoping it doesn't break.
Comment 10 Christian (Fuchs) 2016-07-04 18:13:05 UTC
Unfortunately the 5.7 tarball does not fix the issue.

What I also tried is removing said .desktop file and going through the steps, then I get

launchers=file:///usr/share/applications/org.kde.konsole.desktop,file:///usr/share/applications/org.kde.dolphin.desktop,file:///home/fuchs/.local/share/applications/firefox.desktop,file:///usr/share/applications/google-chrome-beta.desktop,file:///usr/share/applications/org.kde.konversation.desktop,file:///home/fuchs/.local/share/applications/Mattermost.desktop,file:///usr/share/applications/kde4/amarok.desktop,file:///usr/share/applications/smplayer.desktop,file:///home/fuchs/.local/share/applications/org.kde.kate.desktop,file:///opt/oracle-jdk-bin-1.8.0.92/jre/bin/java?iconData=iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAACXBIWXMAAA7EAAAOxAGVKw4bAAAIgElEQVRoge1aW2xUxxn-_jnn7M2XXV9wDHidrUOpgkBsblUVKdiRojZppWIe2j5iKuUh4gFQWkV9aI3VSo1oU0Ndx33DVt8aVYa2ShSBFNPQC1IjFpWqmIvZYIjtsPbuer3nfmb6sBfvrvdib4x5ySfPas_M_P9831zOzP5j4Es8XtAXdRAfDgVcstPHQGFitF8IHiBQxBHiEpOliPeNaHQTeFZEXQK0sVBIOLyfAYcFEAYAIjonwM-_NhaP_v2WFRZAL4AAMuWBAvMEgIgQIsqIroHzKcuyIlsiQBsLheDwQQADWeMEgPG3L6rnf_FB6qAA-hvc7SGfuw0-Vzs8SjMYU9b4sRwVlq1BNWNY0eahWckoAedkojO6rkc3XUB8OBTwKnxQAMfzhkTn3r6QPvPLD61jjFh_a2MP_L5gWcK1YDkqkuoskulZmHZ6XGFsaL1CagrQRkJ9IH4WQChrkPjfgnPihVOx_RJTjnf498LvC26YdCXEV2YQS03DEfaQresna9WvKkAbDQ5A0NmCypFXf7904vIta7i1sSfc3vS1unq8Fji3MBe_ipQ-H5GJDlUbjYoC9N91D5dOmQO_WZq49pk42-HfG9jMXq-EpDqLufjVBHH-cqWFXlaANtJ9EoTBfCWic01vLpxnJJ_tbn8RbsX_qDivgWElcS_2jwS3jbIiWGmGNhocKCIPRF4dWzzDSB7eavIA4Fb86G5_McBk90eKooRLy4sErIyGwiRoOPdMQOJP17Qjl29Zkztbvx7YavI5uBU_Ovx7A5yxSRTvKcUCZMHPioIKjhBHfvgH9bcd_j0Bn7tti-iWh98XRHvTrpDs9o4X5ucFaKPBgdyumoGYCvz4YYvX3f5Sa-OuLSNaDdua98CrNB-UPZ6-XF5eQOHUAQAIaYggnezwP711DNeBjsA-EGg898yAfO8XzC0x1fLW4q7Wpl3dLrlpy0lWg9fVAr8v-KTH1_Q6kBVAgo4VVuICZ9xK08lm787HwbEmAg0hKJLvdQCQsyfL_NwnIBF4a3l2R9tTO5_q6YHX54HX64YsSaseCKDMR00IAQAi-ydKSglUxZcQObvMd8dxYBoWdN2EcWP-BcDZLQuH9xfaCuCcAvlbvQcOoP_gdxF-djd2dHXA5ZJBVP_PByFKyRfIqOI3Z0dE4A5HLJbAzel7GB018ef33_sBY0S9BeQBEpcEnO_s27cH23e0w9fgqZt0KclKaT12AECM0NzcgK6uDjz__H4wsJdkIUTR7uZAihBo7-KCjgsf_guNDV643AoYW7NpPxY4Doem6lhYWIEA75KRPSYDmWnYeDR6zd_c3fzX8x-XdcBIKpv_KMGFU6GEnpZLs3w-_3MBfxu-ursbLrcCj8cNxrLDTI9PgOCZtSCEyCxiw0TK7kKpgCiR1BYMbsfRE99H95OdeKKzDW6PC4osgVjtObseFC5MIURNn5k3EIdl2jBME4mlFO7OPMBPf3ZjjYAio5xaxgiSxCB98SBGnni579XAiCAgYJk2bNsBz45IqYCQEM7i7P05vHv6PbjcChRFBmMMjBEYk6DIm_NW2ggsWwPnPD8SpmnBNG08eDC_dgRUNflJMrmEWzfvrXFEIHg9gTX5jxqqHi-bH4s_gExApPAUqo2Eerf9REsd-t7LTa2tzXB7XEVGiux7tGxLIISA7Wj5Z8fhWF5O49bNGXz6l8vTMoiiyO4FAgAxJwSGKy3trlde-eY3sLNrG3wNXsgyA2NsUxZxPSIEF7AdB5ZlI_Z5AhPjfwSRdINxIS7lKhIACOrlNp-6cuXfmLlzH9G7c1haTMIwLAguqh4JihqskuoSAQHucBi6ibnPYrhy5RMA4hJlo213M5UABiQCP0o-5_O039nR-mxZZw3ebZAl97qaLcbGRs-yVaj6UtmyufhV6KbTyTLBVzFV0GQg_k7zAdWMXdetZFljzYiDkbSuRNmUeWbrtwNBMxJl21eNRRhO6mI6fXeBZTtmoqh_BA473HgntnyjrAPObWhGAsSkGkkGyybKp1o2maQaSxCCl20_od6D5eingOwPGu_R2XEA0dUq1Lf8q85oSl-Iqkb5IdTNJEwrne_hzUy6kfFdDml9ASntwd-MdPJCXkCGsxgqqknOIBEd-Tx5vawjAFhRF2BaK2Akb1pStRhUfbFse5xbmE_8BwIiH7fKC8iMwupaAKhv-dcdYd1aPv8w-d-KIlLpOaTUuYwzJtWdAGA5fR-aUX7TAoCF5HVYjnra1vU8z-JDviQdycb8c4WDH7zhPx1buRNNqrMVHetGArHETehGcsPTRQggrT1ELHEThpmq2EZSnUVSnY3YhlE0U9a819IjwX5GNFlQIReRnvxKR2_N6BwjCV5PGzzuAFxK-YiGEDYMMwXdTMIwElXO-6vk5-JXEzLRM6WR6vLB3Qph9X_eweT2lmcCjZ7Oqg0WQpLckKXV44hlqTUJlyNfKUJdcWepcjcw-YR_b6ClsWfdJOpFLDWNh8vTUcb5oQ2F13PQRoMDJGg4F_QiIPLxbfPEa2PxQZ-7vW97SxiKtPmHO8tRMRePQDViU7ZhHELBuixFzb19ZTQUzgZ9w1mDBAeG_G8ugDFlsKWxJ9Da0LMpNzWcW1hKzyC2PJ0gYMgyjNO1bNZ9ONFGuk8S4dhqCFJMXb5tDb367tJhWXIN-H1B-H3Buu4PDCuJpZUZrOjzCUfYZ2xdP40qvV6XACBzW-mR-fFiIRi_fNuc-PZYPCyAw4rkCzd5O-FW_FAk35qrVs4t6NYyLEeFasSgGouwHDVCwIRlGOPrJV6XgCIhLqefwA4KIfqzjiIcmDh1UY38_P3lADEWhhC9FZ0QXRKcRxzTnNoo6SI39RoWQhsJ9QniYRIIgEQvQFEIfAqZjT_qfzX4Eo8b_wc7ZAiON6qONAAAAABJRU5ErkJggg%3D%3D,file:///usr/share/applications/libreoffice-writer.desktop,file:///usr/share/applications/libreoffice-calc.desktop,file:///usr/share/applications/libreoffice-impress.desktop,file:///usr/share/applications/org.kde.kontact.desktop,file:///home/fuchs/.local/share/applications/VirtualBox.desktop

and again the same behaviour as before. Interesting: if I log out of plasma and back in, the launcher is shown until I actually launch eclipse, then it is replaced by the window and then, on close, gone again :(
Comment 11 Eike Hein 2016-07-04 21:33:02 UTC
Do you have more than one Task Manager? (e.g. multiple panels on different screens)
Comment 12 Christian (Fuchs) 2016-07-05 06:03:19 UTC
(In reply to Eike Hein from comment #11)
> Do you have more than one Task Manager? (e.g. multiple panels on different
> screens)

Not knowingly, no.  One screen (notebook), one panel, one icons only task manager. I'll check the configuration for dead entries as soon as I am home, I can just grep for panel and a configuration value of icon only tasks.
Comment 13 Christian (Fuchs) 2016-07-05 17:53:00 UTC
As mentioned on IRC: 

there were leftovers of old icon tasks (not panels, as far as I am aware) in the appletsrc. 
Re-creating a new one meant losing all of my plasmoids and their configuration, but for now I am no longer able to reproduce it. 

As you are able to reproduce it (with slightly different steps) and it still being a valid bug: I'll leave it in it's current state (NEEDSINFO) and wish you the best of luck to fix it. Thanks for looking into it.
Comment 14 Eike Hein 2016-07-05 18:00:48 UTC
Aye, I think /something/ is broken here that needs investigation and fixing. I'm seeing weirdness, too, but despite throwing five hours of debugging at it I haven't gotten to the bottom of it yet. Stay tuned.
Comment 15 Eike Hein 2016-07-07 20:11:07 UTC
Git commit e2b07027de7cb15171a35aa59e8b90397b5c47b7 by Eike Hein.
Committed on 07/07/2016 at 20:09.
Pushed by hein into branch 'Plasma/5.7'.

Avoid side-channeling through shared static source models.

Fixes a nasty bug causing two TasksModel instances to interfere
with each other.

Also removes an assumption that the launcher list will pass
through LauncherTasksModel unharmed -- if launchers become
activity-silo'd, that might not be the case any longer.

M  +25   -13   libtaskmanager/tasksmodel.cpp

http://commits.kde.org/plasma-workspace/e2b07027de7cb15171a35aa59e8b90397b5c47b7