Avoid side-channeling through shared static source models.

Fixes a nasty bug causing two TasksModel instances to interfere
with each other.
BUG:365011

Also removes an assumption that the launcher list will pass
through LauncherTasksModel unharmed -- if launchers become
activity-silo'd, that might not be the case any longer.